--- a/SeleniumAutomationDemoWebShop/pom.xml
+++ b/SeleniumAutomationDemoWebShop/pom.xml
@@ -21,6 +21,20 @@
     	<scope>test</scope>
 	</dependency>
 
+	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+	<dependency>
+    	<groupId>com.aventstack</groupId>
+    	<artifactId>extentreports</artifactId>
+    	<version>5.0.9</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>commons-io</groupId>
+    	<artifactId>commons-io</artifactId>
+    	<version>2.8.0</version> <!-- Use the latest version -->
+	</dependency>
+
+
 
   
   
