--- a/SeleniumAutomationDemoWebShop/pom.xml
+++ b/SeleniumAutomationDemoWebShop/pom.xml
@@ -9,30 +9,33 @@
   <dependencies>
   
   	<dependency>
-    	<groupId>org.seleniumhq.selenium</groupId>
-    	<artifactId>selenium-java</artifactId>
-    	<version>4.21.0</version> <!-- Check for the latest version -->
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+    <version>4.9.0</version> <!-- Latest version -->
 	</dependency>
 	
 	<dependency>
-    	<groupId>org.testng</groupId>
-    	<artifactId>testng</artifactId>
-    	<version>7.7.1</version> <!-- Check for the latest version -->
-    	<scope>test</scope>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.8.0</version> <!-- Latest version -->
+    <scope>test</scope>
+	</dependency>
+	
+	<dependency>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.1.0</version> <!-- Latest version -->
+	</dependency>
+	
+	<dependency>
+    <groupId>commons-io</groupId>
+    <artifactId>commons-io</artifactId>
+    <version>2.11.0</version> <!-- Latest version -->
 	</dependency>
 
-	<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
-	<dependency>
-    	<groupId>com.aventstack</groupId>
-    	<artifactId>extentreports</artifactId>
-    	<version>5.0.9</version>
-	</dependency>
-	
-	<dependency>
-    	<groupId>commons-io</groupId>
-    	<artifactId>commons-io</artifactId>
-    	<version>2.8.0</version> <!-- Use the latest version -->
-	</dependency>
+
+
+
 
 
 
